fixed overflow

--- a/lab10a/starter-template.css
+++ b/lab10a/starter-template.css
@@ -2,6 +2,14 @@
   height: 530px;
   padding-bottom: 3rem 1.5rem;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 body {
   padding-top: 3.5rem;
 }
@@ -26,4 +34,7 @@ figcaption {
   LEFT: 680px;
   font-family: Georgia;
   font-size: 14px;
+}
+.container {
+  margin-bottom: 0;
 }
